--- a/Haru.Net/Haru.Net.iOS/Haru.Net.nuspec
+++ b/Haru.Net/Haru.Net.iOS/Haru.Net.nuspec
@@ -14,18 +14,25 @@
     <dependencies>
 	  <group targetFramework="MonoAndroid"></group>
 	  <group targetFramework="Xamarin.iOS10"></group>
-	  <group targetFramework="netstandard2.0"></group>
+	  
+	  <group targetFramework="netstandard2.0"> 
+        <dependency id="Xamarin.Forms" version="2.5.0" />
+      </group>
+	  
     </dependencies>
   </metadata>
   <files>
-	  <!-- Android -->
+	  <!-- Cross-platform reference assemblies -->
+	  <file src="..\Haru.Net\bin\Release\netstandard2.0\Haru.Net.dll" target="lib\netstandard2.0\Haru.Net.dll" />
+  
+	  <!-- Android reference assemblies -->
 	  <file src="..\Haru.Net\bin\Release\net451\Haru.Net.dll" target="lib\MonoAndroid\Haru.Net.dll" />
 	  <file src="..\Haru.Net\native\android\armeabi-v7a\**.*" target="runtimes\android\armeabi-v7a" /> 
 	  <file src="..\Haru.Net\native\android\x86\**.*" target="runtimes\android\x86" /> 
 	  <file src="..\Haru.Net\native\android\x86_64\**.*" target="runtimes\android\x86_64" /> 
       <file src="..\Haru.Net\native\android\arm64-v8a\**.*" target="runtimes\android\arm64-v8a" /> 
 	 	  
-	  <!-- iOS --> 
+	  <!-- iOS reference assemblies -->
 	  <file src="Haru.Net.iOS\bin\Release\Haru.Net.dll" target="lib\Xamarin.iOS10\Haru.Net.dll" /> 
 	  
 	  <file src="build\Haru.Net.targets" target="build\Haru.Net.Mobile.targets" />
